# telegram_weather

./: .gitignore  README.md
telegram_weather_api/: .env.example  .gitignore  Makefile  README.md  local.yml  pyproject.toml  requirements.txt
telegram_weather_api/.envs/example/: .django  .postgres
telegram_weather_api/compose/local/django/: Dockerfile  entrypoint  start
telegram_weather_api/config/: exceptions.py  urls.py
telegram_weather_api/config/settings/: base.py  local.py
telegram_weather_api/fixtures/: cities_fixture.json
telegram_weather_api/weather/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
telegram_weather_api/weather/migrations/: 0001_initial.py
telegram_weather_client/: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
